@@ -14,6 +14,8 @@
 
     * las/arch/x86_64/main.c: Added the DAA instruction
 
+    * las/arch/x86_64/main.c: Added the DAS instruction
+
 
 2013-12-07  Hirochika Asai  <asai@scyphus.co.jp>
 
